Logo text color no longer visible

--- a/static/css/theme-my-custom-variant.css
+++ b/static/css/theme-my-custom-variant.css
@@ -32,7 +32,13 @@
   --BOX-BG-color: rgba( 255, 255, 255, .833 ); /* background color of colored boxes */
   --BOX-TEXT-color: rgba( 16, 16, 16, 1 ); /* text color of colored box content */
 }
-
+#R-header #logo{
+  color: var(--MENU-HOME-LINK-color);
+  font-weight: bold;
+}
+.language-switcher {
+  margin-right: 4px;
+}
 #R-body span.project-badge a img  {
   display:inline;
   margin:0;
